# CEIA_IIA

./: .gitignore  TP1.ipynb  TP2.ipynb  pyproject.toml
.ipynb_checkpoints/: TP1-checkpoint.ipynb
