[project]
name = "CEIA_IIA_TPs"
version = "0.1.0"
description = ""
authors = [
    {name = "Agustin Lopez Fredes",email = "agustin.lopezfredes@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "numpy (>=2.2.4,<3.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "joblib (>=1.4.2,<2.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "ipykernel (>=6.29.5,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

